--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GOOGLE_CLIENT_ID=Your GOOGLE_CLIENT_ID
-GOOGLE_CLIENT_SECRET=Your GOOGLE_CLIENT_SECRET
+GOOGLE_CLIENT_ID=876245004281-i0f0itvt6tsaet1l9oihhjb2io0b3tn6.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
