--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
@@ -23,6 +25,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.9.2"
   }
 }
