--- a/.env
+++ b/.env
@@ -26,5 +26,5 @@ VERCEL_GIT_REPO_ID=""
 VERCEL_GIT_REPO_OWNER=""
 VERCEL_GIT_REPO_SLUG=""
 VERCEL_URL=""
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="https://next-google-auth-tennis-league.vercel.app/"
 NEXTAUTH_SECRET="secret"
